# modulus-ml

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  try.py
modulus_ml/: __init__.py
notebooks/: try.ipynb
src/modulus_ml/: __init__.py  comparator.py  metrics.py  utils.py  visualizer.py
tests/: test_comparator.py
