[metadata]
name = modulus-ml
version = 0.1.0
author = Akinsanya Joel
author_email = akinsanyajoel82@gmail.com
description = An ML model comparison library
long_description = file: README.md
url = https://github.com/kiojoel/modulus-ml
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
    scikit-learn>=0.24.0
    pandas>=1.2.0
    matplotlib>=3.3.0

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203